--- a/package.json
+++ b/package.json
@@ -78,9 +78,14 @@
     "@angularclass/hmr-loader": "~3.0.2",
     "assets-webpack-plugin": "^3.4.0",
     "core-js": "^2.4.1",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
+    "node-sass": "^4.1.1",
     "rxjs": "5.0.0-beta.12",
+    "sass-loader": "^4.1.0",
+    "style-loader": "^0.13.1",
     "zone.js": "~0.6.26"
   },
   "devDependencies": {
