--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "imports-loader": "^0.6.5",
+    "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "node-sass": "^4.1.1",
     "rxjs": "5.0.0-beta.12",
