--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "core-js": "^2.4.1",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "hammerjs": "^2.0.8",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "imports-loader": "^0.6.5",
