定義ファイルの追加暫定対応

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,11 @@
       "selenium-webdriver",
       "source-map",
       "uglify-js",
-      "webpack"
+      "webpack",
+      "jquery",
+      "jquery.leanmodal",
+      "jquery.validation",
+      "materialize-css"
     ]
   },
   "exclude": [
