--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@angularclass/hmr": "~1.2.2",
     "@angularclass/hmr-loader": "~3.0.2",
     "@types/jquery.leanmodal": "https://registry.npmjs.org/@types/jquery.leanmodal/-/jquery.leanmodal-1.1.27.tgz",
+    "@types/jquery.validation": "https://registry.npmjs.org/@types/jquery.validation/-/jquery.validation-1.13.32.tgz",
     "apply-loader": "^0.1.0",
     "assets-webpack-plugin": "^3.4.0",
     "core-js": "^2.4.1",
