--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "assets-webpack-plugin": "^3.4.0",
     "core-js": "^2.4.1",
     "css-loader": "^0.26.1",
+    "expose-loader": "https://registry.npmjs.org/expose-loader/-/expose-loader-0.7.1.tgz",
     "hammerjs": "^2.0.8",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
@@ -105,6 +106,7 @@
     "rxjs": "~5.0.2",
     "sass-loader": "^4.1.0",
     "style-loader": "^0.13.1",
+    "velocity-animate": "^1.4.0",
     "zone.js": "~0.7.4"
   },
   "devDependencies": {
