--- a/package.json
+++ b/package.json
@@ -93,12 +93,13 @@
     "core-js": "^2.4.1",
     "css-loader": "^0.26.1",
     "expose-loader": "https://registry.npmjs.org/expose-loader/-/expose-loader-0.7.1.tgz",
-    "hammerjs": "^2.0.8",
+    "hammerjs": "https://registry.npmjs.org/hammerjs/-/hammerjs-2.0.8.tgz",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "imports-loader": "^0.6.5",
     "jasmine-core": "^2.5.2",
     "jquery": "https://registry.npmjs.org/jquery/-/jquery-3.1.1.tgz",
+    "jquery-hammerjs": "^2.0.0",
     "jquery-validation": "https://registry.npmjs.org/jquery-validation/-/jquery-validation-1.16.0.tgz",
     "materialize-css": "^0.97.8",
     "moment": "https://registry.npmjs.org/moment/-/moment-2.17.1.tgz",
